# spooknix

./: .env.brev.example  .env.example  .gitignore  .mcp.json  .sops.yaml  AGENTS.md  Dockerfile  GEMINI.md  INIT (copy).md  JOB (copy).md  LICENSE  PLAN.md  POC.md  README.md  RULES.xml  RUNBOOK.md  TODO.md  docker-compose.brev.yml  docker-compose.workers.yml  docker-compose.yml  flake.nix  pyproject.toml  renovate.json  requirements.txt  simulador-entrevistas.md  sound.txt  test_info.txt
.brev/: setup.sh
.gemini/: settings.json
deploy/: BREV.md  Dockerfile.prod
nix/: package.nix
personas/: marcus.yaml  priya.yaml  sarah.yaml
scenarios/: backend.yaml  behavioral.yaml  frontend.yaml  leadership.yaml  ml.yaml  product.yaml  system_design.yaml
scripts/: brev-launch.sh  ebpf-worker-latency.bt
secrets/: secrets.yaml
src/: audio_meter.py  audio_pipeline.py  cli.py  denoise.py  diarizer.py  doctor.py  gui.py  llm_client.py  llm_fallback.py  logging_setup.py  loudness.py  mcp_tool.py  media.py  metrics.py  orchestrator.py  personas.py  recorder.py  rubric.py  scenarios.py  server.py  sessions_db.py  summarizer.py  timestamp_links.py  transcriber.py  tts_client.py  types.py  vad_silero.py
templates/: evaluator.md  evaluator_rubric.md  interviewer.md  lecture.md  meeting.md  notes.md  study_guide.md  summary.md
tests/: test_audio_meter.py  test_audio_pipeline.py  test_cli_interview_flags.py  test_cli_record.py  test_cli_stdout.py  test_diarize_merge.py  test_diarizer.py  test_doctor.py  test_llm_client.py  test_llm_fallback.py  test_loudness.py  test_mcp_tool.py  test_media.py  test_metrics.py  test_metrics_extensions.py  test_orchestrator.py  test_recorder.py  (+12 more)
(+41 files in other folders)
