[tool.poetry]
name = "spooknix"
version = "0.5.0"
description = "Privacy-first Speech-to-Text Engine"
authors = ["voidnxlabs <sec@voidnxlabs.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
# STT core
torch = ">=2.0.0"
faster-whisper = ">=1.0.0"
# Áudio
sounddevice = ">=0.4.6"
numpy = ">=1.24.0"
# Servidor
aiohttp = ">=3.9.0"
aiofiles = ">=23.0.0"
websockets = ">=12.0"
# Signal processing
scipy = ">=1.12.0"
# CLI
click = ">=8.1.0"
rich = ">=13.0.0"
# MCP server
mcp = ">=1.0.0"
openai = "^2.33.0"
pyyaml = ">=6.0"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
requests = ">=2.31.0"

[tool.poetry.group.diarization]
optional = true

[tool.poetry.group.diarization.dependencies]
pyannote-audio = ">=3.1.0"

[tool.poetry.group.audio-quality]
optional = true

[tool.poetry.group.audio-quality.dependencies]
silero-vad = ">=5.1"
deepfilternet = ">=0.5"
pyloudnorm = ">=0.1.1"

[tool.poetry.group.summarize]
optional = true

[tool.poetry.group.summarize.dependencies]
jinja2 = ">=3.1"
tiktoken = ">=0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
spooknix = "src.cli:cli"
spooknix-gui = "src.gui:main"
spooknix-desktop = "src.gui.app:main"
spooknix-mcp = "src.mcp_tool:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
